<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Ambient settings -->
    <string name="ambient_enable">Use ambient display</string>

    <!-- Device specific settings -->
    <string name="device_settings_app_name">PopupSettings</string>

    <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
    <string name="summary_empty" translatable="false"></string>

    <!--Display settings fragment -->
    <string name="display_settings_title">Custom Display Settings</string>
    <string name="display_settings_summary">DC &amp; HBM</string>

    <!-- HBM settings -->
    <string name="hbm_mode_title">High Brightness Mode</string>
    <string name="hbm_mode_summary">High Brightness Mode allows the display panel brightness to go above the maximum stock value. Which helps in improving visibility in direct sunlight</string>
    <string name="hbm_enable_summary_not_supported">HBM is not currently supported by the kernel</string>

    <!-- DC settings -->
    <string name="dc_dimming_mode_title">DC Dimming Mode</string>
    <string name="dc_dimming_mode_summary">Turn on the low brightness DC dimming function to stop flickering, some screen display functions will be affected.</string>
    <string name="dc_dimming_mode_not_supported">The current system does not support anti-flicker mode.</string>

    <!-- Popup camera settings -->
    <string name="popup_title">Front camera effects</string>
    <string name="popup_led_title">Camera LED</string>
    <string name="popup_led_summary">Enable LED light while the front camera appears and retracts</string>
    <string name="popup_led_color_title">LED color</string>
    <string name="popup_led_color_blue">Blue</string>
    <string name="popup_led_color_green">Green</string>
    <string name="popup_led_color_cyan">Cyan</string>
    <string name="popup_led_color_red">Red</string>
    <string name="popup_led_color_purple">Purple</string>
    <string name="popup_led_color_yellow">Yellow</string>
    <string name="popup_led_color_white">White</string>
    <string name="popup_sound_title">Sound effects</string>
    <string name="popup_sound_muqin">Xylophone</string>
    <string name="popup_sound_yingyan">Condor</string>
    <string name="popup_sound_mofa">Magic</string>
    <string name="popup_sound_jijia">Mecha</string>
    <string name="popup_sound_chilun">Gearwheel</string>
    <string name="popup_sound_cangmen">Cabin door</string>

    <!-- Popup camera strings -->
    <string name="popup_camera_tip">Warning</string>
    <string name="popup_camera_takeback_failed_calibrate">Couldn\'t close front camera. Try calibrating the motor.</string>
    <string name="popup_camera_popup_failed_calibrate">Couldn\'t open front camera. Try calibrating the motor.</string>
    <string name="popup_camera_calibrate_running">Front camera cannot be used during calibration.</string>
    <string name="popup_camera_calibrate_now">Calibrate</string>
    <string name="popup_camera_calibrate_failed">Couldn\'t calibrate</string>
    <string name="popup_camera_calibrate_success">Calibrated successfully. You can open the front camera now.</string>

    <!-- Thermal profiles -->
    <string name="thermal_title">Thermal profiles</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_benchmark">Benchmark</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>
</resources>
